--- a/KLF_files/css/style.css
+++ b/KLF_files/css/style.css
@@ -85,29 +85,33 @@ header .region{
 
 .lead{
 	text-align: right;
-    font-size: 20px;
-    font-family: 'Open Sans', sans-serif;
-    float: right;
-    border-right: 4px solid #8bd1ea;
-    padding-right: 7px;
-    margin-top: 35px;
+	font-size: 20px;
+	font-family: 'Open Sans', sans-serif;
+	float: right;
+	border-right: 4px solid #8bd1ea;
+	padding-right: 7px;
+	margin-top: 35px;
 }
 /*************************main-navigation*****************************/
 #main-navigation{
 	background: url("../../Ressouces/bg_menu.png");
 	background-color: #8bd1ea;
 }
-.navbar{
+
+header#navbar{
 	margin-bottom: 0px;
 }
-
-.navbar-lapse menu{
-	text-align: center
+nav#bs-example-navbar-collapse-1{
+	height: 50px !important
 }
 
-#main-navigation .menu li {
-	border-right:  2px solid black;
-	margin-left: 5px ;
+#main-navigation ul.navbar-nav {
+	display: inline-block;
+	text-align: center;
+	float: right;
+}
+#main-navigation .menu li{
+
 }
 #main-navigation .menu li.last {
 	border-right: none;
@@ -119,7 +123,14 @@ header .region{
 #main-navigation ul a{
 	color: black;
 	font-size: 16px;
+	font-weight: bold;
 	text-transform: uppercase;
+	border-right:  2px solid black;
+}
+
+#main-navigation ul li>a:hover , #main-navigation ul li>a:focus ,
+#main-navigation .dropdown-menu li a:hover , #main-navigation .dropdown-menu li a:focus{
+	background-color: #8bd1ea
 }
 
 .view-content{
@@ -187,8 +198,9 @@ header .region{
 }
 #main-content .event{
 	background: url("../../Ressouces/bg_evt.png") no-repeat top center;
-	background-size: contain;
-	height: 220px;
+	background-size: cover;
+	height: 222px;
+	width: 222px;
 }
 #main-content .projet{
 	background: url("../../Ressouces/bg_prt.png") no-repeat top center;
@@ -208,6 +220,25 @@ header .region{
 	height: 220px;
 }
 
+.main-container .block-tag-container .info {
+    overflow: hidden;
+    background-color: red;
+    width: 100%;
+    top: 0px;
+    position: absolute;
+    z-index: -1;
+    left: 0px;
+    height: 100%;
+    opacity: 0;
+		transition: .7s all;
+}
+.main-container .view-header h3:hover  .view-header .info{
+	opacity: 1;
+	z-index: 1000;
+}
+.main-container .block-tag-container .info .view-footer{
+	text-align: justify;
+}
 #main-content .field-title h2{
 	font-size: 20px;
 }
