--- a/KLF_files/css/style.css
+++ b/KLF_files/css/style.css
@@ -30,7 +30,6 @@ header .region{
 }
 #block-social-top{
 	float: right;
-
 }
 
 #block-locale-language{
@@ -63,16 +62,16 @@ header .region{
 }
 
 #block-search-form .glyphicon{
-    color: #000;
-		font-size: 18px;
-		top: 3px;
+	color: #000;
+	font-size: 18px;
+	top: 3px;
 }
 
 #block-search-form .btn-primary {
-		background-image: linear-gradient(to bottom,#8bd1ea 0,#8bd1ea 100%);
-    background-color: #8bd1ea;
-    border-color: #8bd1ea;
-		border-radius: 1px;
+	background-image: linear-gradient(to bottom,#8bd1ea 0,#8bd1ea 100%);
+	background-color: #8bd1ea;
+	border-color: #8bd1ea;
+	border-radius: 1px;
 
 }
 #block-locale-language ul{
@@ -92,6 +91,7 @@ header .region{
 	padding-right: 7px;
 	margin-top: 35px;
 }
+
 /*************************main-navigation*****************************/
 #main-navigation{
 	background: url("../../Ressouces/bg_menu.png");
@@ -101,19 +101,23 @@ header .region{
 header#navbar{
 	margin-bottom: 0px;
 }
-nav#bs-example-navbar-collapse-1{
-	height: 50px !important
+
+#main-navigation .navbar {
+	position: relative;
+	margin:10px;
 }
 
-#main-navigation ul.navbar-nav {
-	display: inline-block;
-	text-align: center;
-	float: right;
+#main-navigation ul.menu {
+	-webkit-padding-start: 60px;
+  -webkit-padding-end: 60px;
+	top: -5px;
+	position: relative;
 }
-#main-navigation .menu li{
+#main-navigation div.row{
+	height: 50px;
+}
 
-}
-#main-navigation .menu li.last {
+#main-navigation ul.menu>li.last a{
 	border-right: none;
 }
 
@@ -122,12 +126,20 @@ nav#bs-example-navbar-collapse-1{
 }
 #main-navigation ul a{
 	color: black;
-	font-size: 16px;
+	font-size: 14px;
 	font-weight: bold;
+	font-family: 'Open Sans';
 	text-transform: uppercase;
 	border-right:  2px solid black;
 }
+#main-navigation .dropdown-menu{
+	width: 100%;
+	background-color: #8bd1ea;
+}
 
+#main-navigation .dropdown-menu li{
+	padding: 2px
+}
 #main-navigation ul li>a:hover , #main-navigation ul li>a:focus ,
 #main-navigation .dropdown-menu li a:hover , #main-navigation .dropdown-menu li a:focus{
 	background-color: #8bd1ea
@@ -153,7 +165,10 @@ nav#bs-example-navbar-collapse-1{
     font-family: "Time"
 }
 
-.carousel-control.right , .carousel-control.left {
+.carousel-control.right{
+	background-image: url("../../Ressouces/bg_carousel.png")
+}
+.carousel-control.left {
     background-image: linear-gradient(to right,rgba(0,0,0,0) 0,rgba(0, 0, 0, 0) 100%);
 }
 
@@ -181,14 +196,21 @@ nav#bs-example-navbar-collapse-1{
 	color: #000;
 	font-size: 20px;
 	text-align: left;
-	margin-left: 30px;
+	margin-left: 50px;
+	margin-right: 50px;
 }
 /*****************.main-content*****************************/
 #main-content{
-	background: url("../../Ressouces/bg_body.png")top center;
-	background-size: 100% 50%;
+	background: url("../../Ressouces/bg_body_2.png")top center ,url("../../Ressouces/bg_body.png")top center;
+	background-size: 100% 50% , 100% 50%;
 	margin-top: 30px;
 	margin-bottom: 45px;
+}
+
+#main-content .block{
+	border-bottom: 2px solid rgba(139, 209, 234, 0.3);
+	padding-bottom: 30px;
+	margin-top: 30px
 }
 #main-content .block-tag-title h3{
 	text-align: center;
@@ -220,32 +242,15 @@ nav#bs-example-navbar-collapse-1{
 	height: 220px;
 }
 
-.main-container .block-tag-container .info {
-    overflow: hidden;
-    background-color: red;
-    width: 100%;
-    top: 0px;
-    position: absolute;
-    z-index: -1;
-    left: 0px;
-    height: 100%;
-    opacity: 0;
-		transition: .7s all;
-}
-.main-container .view-header h3:hover  .view-header .info{
-	opacity: 1;
-	z-index: 1000;
-}
-.main-container .block-tag-container .info .view-footer{
-	text-align: justify;
-}
 #main-content .field-title h2{
 	font-size: 20px;
 }
 #main-content .field-subtitle ,
 #main-content .field-date ,
-#main-content .field-artist{
+#main-content .field-artist ,
+.main-container .field-title a{
 	text-align: center;
+	font-weight: 600;
 }
 .main-container .img-responsive{
 	height: 180px !important
